added if for age and discount

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <body>
    <div class="position-relative">
         <div class="box">
-            
+            <h1 id="prezzo">
+              
+            </h1>
         </div>
    </div>
 
