--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
   <body>
    <div class="position-relative">
         <div class="box">
-            <h1 id="prezzo">
-              
-            </h1>
+          <h2>
+            Il prezzo del suo biglietto ammonta a:
+          </h2>
+          <h1 id="prezzo">
+          </h1>
         </div>
    </div>
 
