--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
   <body>
    <div class="position-relative">
-        <div class="box">
+        <div class="box border border-black border-4 p-3">
           <h2>
             Il prezzo del suo biglietto ammonta a:
           </h2>
-          <h1 id="prezzo">
+          <h1 id="prezzo" class="text-center">
           </h1>
         </div>
    </div>
